Fixed wrapping of ridiculously long messages

--- a/design.css
+++ b/design.css
@@ -4,6 +4,11 @@
 	margin: 0;
 	padding: 0;
 	font-size: 100%;
+	-webkit-hyphens: auto;
+	hyphens: auto;
+	-webkit-word-break: break-word;
+	word-wrap: break-word;
+	-webkit-word-wrap: break-word;
 	word-wrap: break-word;
 }
 
